[package]
name = "matrixes"
description = "Implementation of matrices up to and slightly beyond a highschool level. See readme for details."
version = "1.4.0"
readme = "README.md"
repository = "https://github.com/TheKnightGawain/matrixes/"
license = "MIT"
keywords = ["matrix", "matrices", "math", "maths", "linear-algebra"]
categories = ["data-structures", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
